logs/dag_id=second_dag/run_id=scheduled__2021-01-19T00:00:00+00:00/task_id=save_data_task/attempt=1.log
[2025-06-01T15:54:14.867+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: second_dag.save_data_task scheduled__2021-01-19T00:00:00+00:00 [queued]>
[2025-06-01T15:54:14.876+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: second_dag.save_data_task scheduled__2021-01-19T00:00:00+00:00 [queued]>
[2025-06-01T15:54:14.877+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 3
[2025-06-01T15:54:14.894+0000] {taskinstance.py:1327} INFO - Executing <Task(PythonOperator): save_data_task> on 2021-01-19 00:00:00+00:00
[2025-06-01T15:54:14.903+0000] {standard_task_runner.py:57} INFO - Started process 27283 to run task
[2025-06-01T15:54:14.923+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'second_dag', 'save_data_task', 'scheduled__2021-01-19T00:00:00+00:00', '--job-id', '1140', '--raw', '--subdir', 'DAGS_FOLDER/my_second_dag.py', '--cfg-path', '/tmp/tmphcq0h0q3']
[2025-06-01T15:54:14.925+0000] {standard_task_runner.py:85} INFO - Job 1140: Subtask save_data_task
[2025-06-01T15:54:15.034+0000] {task_command.py:410} INFO - Running <TaskInstance: second_dag.save_data_task scheduled__2021-01-19T00:00:00+00:00 [running]> on host 27c4b93144a0
[2025-06-01T15:54:15.414+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='second_dag' AIRFLOW_CTX_TASK_ID='save_data_task' AIRFLOW_CTX_EXECUTION_DATE='2021-01-19T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2021-01-19T00:00:00+00:00'
[2025-06-01T15:54:15.438+0000] {my_second_dag.py:51} INFO - Fetching value USD: 73.9735
[2025-06-01T15:54:15.467+0000] {base.py:73} INFO - Using connection ID 'pg_database' for task execution.
[2025-06-01T15:54:15.480+0000] {logging_mixin.py:150} WARNING - /home/***/.local/lib/python3.7/site-packages/***/utils/context.py:313 AirflowContextDeprecationWarning: Accessing 'execution_date' from the template is deprecated and will be removed in a future version. Please use 'data_interval_start' or 'logical_date' instead.
[2025-06-01T15:54:15.481+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1911, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "T00"
LINE 1: ... usd_to_rub_rates (date, value) VALUES (2021-01-19T00:00:00+...
                                                             ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/my_second_dag.py", line 64, in save_data_to_db
    text(f"INSERT INTO usd_to_rub_rates (date, value) VALUES ({execution_date}, {data})")
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1385, in execute
    return meth(self, multiparams, params, _EMPTY_EXECUTION_OPTS)
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/sql/elements.py", line 335, in _execute_on_connection
    self, multiparams, params, execution_options
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1587, in _execute_clauseelement
    cache_hit=cache_hit,
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1954, in _execute_context
    e, statement, parameters, cursor, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 2135, in _handle_dbapi_exception
    sqlalchemy_exception, with_traceback=exc_info[2], from_=e
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1911, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near "T00"
LINE 1: ... usd_to_rub_rates (date, value) VALUES (2021-01-19T00:00:00+...
                                                             ^

[SQL: INSERT INTO usd_to_rub_rates (date, value) VALUES (2021-01-19T00:00:00+00:00, 73.9735)]
(Background on this error at: https://sqlalche.me/e/14/f405)
[2025-06-01T15:54:15.493+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=second_dag, task_id=save_data_task, execution_date=20210119T000000, start_date=20250601T155414, end_date=20250601T155415
[2025-06-01T15:54:15.509+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 1140 for task save_data_task ((psycopg2.errors.SyntaxError) syntax error at or near "T00"
LINE 1: ... usd_to_rub_rates (date, value) VALUES (2021-01-19T00:00:00+...
                                                             ^

[SQL: INSERT INTO usd_to_rub_rates (date, value) VALUES (2021-01-19T00:00:00+00:00, 73.9735)]
(Background on this error at: https://sqlalche.me/e/14/f405); 27283)
[2025-06-01T15:54:15.534+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2025-06-01T15:54:15.564+0000] {taskinstance.py:2653} INFO - 0 downstream tasks scheduled from follow-on schedule check
